--- a/Lab2/pyproject.toml
+++ b/Lab2/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.12,<3.13"
 numpy = "^1.26.1"
+tqdm = "^4.66.1"
+ipywidgets = "^8.1.1"
 
 
 [tool.poetry.group.dev.dependencies]
