--- a/quixo/pyproject.toml
+++ b/quixo/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+numpy= "^1.26.0"
+tqdm = "4.66.0"
+
 
 
 [tool.poetry.group.dev.dependencies]
